--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "tough-cookie": "^2.3.3"
   },
   "peerDependencies": {
-    "request": "^2.34"
+    "postman-request": "^2.88.1-postman.19"
   },
   "devDependencies": {
     "body-parser": "~1.15.2",
@@ -51,7 +51,7 @@
     "gulp-mocha": "~2.2.0",
     "lodash": "~4.13.1",
     "publish-please": "~2.1.4",
-    "request": "^2.34.0",
+    "postman-request": "^2.88.1-postman.19",
     "rimraf": "~2.5.3",
     "run-sequence": "~1.2.2"
   }
