--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "node": ">=0.12.0"
   },
   "dependencies": {
-    "request-promise-core": "1.1.4",
+    "request-promise-core": "EIGHTFINITE/request-promise-core#master",
     "stealthy-require": "^1.1.1",
     "tough-cookie": "^2.3.3"
   },
