--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "request-promise-core": "EIGHTFINITE/request-promise-core#master",
     "stealthy-require": "^1.1.1",
-    "tough-cookie": "^2.3.3"
+    "tough-cookie": "~4.1.2"
   },
   "peerDependencies": {
     "postman-request": "^2.88.1-postman.19"
